# itxda-afl-server

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  test_settings.py
notebook_references/: dev_logbook_entry.ipynb  separate_logbook.ipynb
src/api/: main.py
src/config/: settings.py
src/db/: connections.py
src/pipelines/: logbook_entry.py  logbook_sheet.py
